kubernetes/psc-application-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psc-application
  labels:
    app: pitc-scrum-poker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pitc-scrum-poker-prod
  template:
    metadata:
      labels:
        app: pitc-scrum-poker-prod
    spec:
      containers:
        - name: pitc-scrum-poker-prod
          image: registry.puzzle.ch/puzzle/scrum-poker:1.0.22-PROD
          ports:
            - name: http
              containerPort: 8080
