kubernetes/psc-application-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: psc-application
  namespace: pitc-psc-prod
  labels:
    argocd.argoproj.io/instance: pitc-psc-prod
    public: 'false'
spec:
  to:
    kind: Service
    name: pitc-psc-prod
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  host: scrum-poker.ocp-internal.cloudscale.puzzle.ch
  port:
    targetPort: http
